# endhiran

./: CMakeLists.txt  README.md
model/: dnn_relu.txt  eval_weights.csv  eval_weights_l2.csv  eval_weights_l2c.csv
python/: CMakeLists.txt
python/nb/: feat_analysis.ipynb  game.ipynb  sklearn_train.ipynb  tf_dnn_train.ipynb  tf_dnn_train_utils.py  tf_linear_train.ipynb
python/scripts/: feature_gen.py  feature_gen_json.py  feature_gen_tf.py  feature_verify.py  feature_weight_dnn_verify.py  feature_weight_verify.py  read_pgn.py
python/src/: pyendhiran.cpp
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  cli_main.cxx  defs.cpp  defs.h  eval.cpp  eval_features.cpp  eval_features.h  feature_weights.cpp  feature_weights.h  fen.cpp  gamestack.h  hash.cpp  hash.h  move.cpp  move.h  movegen.cpp  movemake.cpp  perft_main.cxx  search.cpp  table.cpp  table.h  timer.h  uci.cpp  uci_main.cxx
test/: CMakeLists.txt
test/src/: eval.cpp
